fixes bio spacing when there aren't paragraph tags

--- a/app/javascript/mastodon/components/account_header/styles.module.scss
+++ b/app/javascript/mastodon/components/account_header/styles.module.scss
@@ -275,9 +275,14 @@ $button-fallback-breakpoint: $button-breakpoint + 55px;
   font-size: 15px;
   color: var(--color-text-primary);
   unicode-bidi: plaintext;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+
+  p {
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 
   :any-link {
     color: var(--color-text-status-links);
